# g_challenge_de

./: .env  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  productionenv  pyproject.toml  startup.py
.github/workflows/: prod.workflow.yml
g_challenge_de/: main.py
g_challenge_de/src/: main.py  settings.py
g_challenge_de/src/core/: schemas.py
g_challenge_de/src/core/db/: create_schemas.py  db_connect.py
g_challenge_de/src/core/db/entities/: departments.py  hired_employees.py  jobs.py
g_challenge_de/src/docs/diagrams/: er_diagram.drawio
g_challenge_de/src/v1/: application_api.py
tests/: test_init.py
tests/integration/: test.py
